--- a/src/components/pages/styles/works.scss
+++ b/src/components/pages/styles/works.scss
@@ -79,10 +79,13 @@
       &.opened {
         flex-grow: 1;
 
+        .work-details {
+          width: 80%;
+          margin-top: 10px;
+          opacity: 1;
+        }
+          
         &.reverse {
-          .background-image {
-            opacity: 0.7;
-          }
 
           .title {
             color: var(--color-three-title);
@@ -145,6 +148,10 @@
       
       &.closed {
         flex-shrink: 1;
+
+        .work-details {
+          width: 0;
+        }
       }
     }
   }
@@ -186,11 +193,6 @@
       
       .background {
         width: 100%;
-      }
-      
-      .background-image {
-        opacity: 0.7;
-        transition-delay: 0.3s;
       }
       
       .title {
@@ -259,20 +261,6 @@
       z-index: 0;
     }
     
-    .background-image {
-      position: absolute;
-      right: 0;
-      width: 100%;
-      height: 150px;
-      border: 1px solid red;
-      background-image: url('../../../screenShots/formi.png');
-      background-size: 100%;
-      background-repeat: no-repeat;
-      background-position: center;
-      opacity: 0;
-      transform: skew(15deg);
-    }
-    
     .title {
       color: var(--color-four-title);
       z-index: 2;
@@ -286,7 +274,40 @@
       margin-top: -30px;
       color: var(--color-two);
     }
+    
+    .work-details {
+      width: 0%;
+      height: 20%;
+      z-index: 1;
+      margin-top: -130px;
+      display: flex;
+      flex-direction: row;
+      padding: 0px;
+      border: 1px solid red;
+      opacity: 0;
+      display: none;
 
+      .work-image {
+        flex-grow: 1;
+        flex-basis: 50%;
+        border: 1px solid red;
+        background-image: url('../../../screenShots/formi.png');
+        background-size: 100%;
+        background-repeat: no-repeat;
+        background-position: center;
+        border-radius: 20px;
+      }
+      
+      .work-text {
+        flex-grow: 1;
+        flex-basis: 50%;
+        font-size: 25%;      
+        background: #6c9;
+        border: 1px solid red;
+        overflow: hidden;
+      }
+    }
+    
     .buttons-panel {
       position: relative;
       width: 80%;
