--- a/src/components/pages/styles/works.scss
+++ b/src/components/pages/styles/works.scss
@@ -241,6 +241,13 @@
         color: var(--color-four);
       }
       
+      .work-details {
+
+        .work-text {
+          color: var(--color-four);
+        }
+      }
+      
       .buttons-panel {
         
         .button {
@@ -293,25 +300,43 @@
       margin-top: -130px;
       display: flex;
       flex-direction: row;
-      padding: 0px;
-      border: 1px solid red;
+      justify-content: space-around;
+      padding: 5px;
       opacity: 0;
-
+      
       .work-image {
-        flex-grow: 1;
-        flex-basis: 50%;
-        background-image: url('../../../screenShots/formi.png');
+        flex-basis: 47%;
         background-size: 100%;
         background-repeat: no-repeat;
         background-position: center;
+        border-radius: 9px;
+        
+        &.Formi {
+          background-image: url('../../../screenShots/formi.png');
+        }
+        
+        &.Trello {
+          background-image: url('../../../screenShots/trello-clone.png');
+        }
+        
+        &.Diprella {
+          background-image: url('../../../screenShots/diprella.png');
+        }
+        
+        &.Todo {
+          background-image: url('../../../screenShots/todo.png');
+        }
       }
       
       .work-text {
-        flex-grow: 1;
-        flex-basis: 50%;
+        flex-basis: 47%;
         font-size: 25%;      
-        background: #6c9;
+        background: transparent;
+        color: var(--color-two);
         overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
     }
     
